--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "flowbite": "^2.5.1",
+    "flowbite-react": "^0.10.1",
     "lucide-react": "^0.418.0",
     "next": "14.2.5",
     "react": "^18",
