--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-spring/web": "^9.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^11.5.5",
+    "hamburger-react": "^2.5.1",
     "lucide-react": "^0.418.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-spring": "8.0.27",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
