--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.5.5",
     "hamburger-react": "^2.5.1",
     "lucide-react": "^0.418.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
