--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-spring/web": "^9.7.4",
     "class-variance-authority": "^0.7.0",
