Refactors UI pages and improves content structure
Updates the About page with a revised layout, enhanced team and infrastructure sections, and dynamic content for years of experience. Simplifies the Contact page by reusing the Contact component and removing redundant code. Adds metadata to various pages for better SEO. Replaces font family for consistency and updates footer content. Introduces GSAP for animations and removes unused assets and dependencies.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.5",
+    "gsap": "^3.13.0",
     "hamburger-react": "^2.5.1",
     "lenis": "^1.1.14",
     "lucide-react": "^0.418.0",
